k8s/ams/01-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ams-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/ams/query
      - /api/ams/mutation
      - /api/ams
