k8s/ams/02-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ams-service
  namespace: kube-system
spec:
  serviceName: ams-service
  replicas: ${REPLICAS}
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: ams-service
  template:
    metadata:
      labels:
        app: ams-service
    spec:
      # topologySpreadConstraints:
      # - maxSkew: 1
      #   topologyKey: kubernetes.io/hostname
      #   whenUnsatisfiable: ScheduleAnyway
      #   labelSelector:
      #     matchLabels:
      #       app: ams-service
      containers:
      - name: ams-service
        image: npool/linera-respeer:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "./wallet-entrypoint.sh"]
        volumeMounts:
        - name: ams-pvc
          mountPath: /wallet
        - name: shared-app-data
          mountPath: /shared-app-data
        resources:
          requests:
            cpu: "30m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
      volumes:
      - name: shared-app-data
        persistentVolumeClaim:
          claimName: shared-app-data
  volumeClaimTemplates:
    - metadata:
        name: ams-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi

---
apiVersion: v1
kind: Service
metadata:
  name: ams-service
  namespace: kube-system
spec:
  ports:
    - name: ams-service
      port: 8080
      targetPort: 8080
  selector:
    app: ams-service
